// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AttachmentBox matches snapshot when can download attachment 1`] = `
.emotion-0 {
  background: #F1F5F9;
  border-radius: 4px;
  color: #172b4e;
  height: 32px;
  padding: 0px 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  display: inline-block;
  position: relative;
  border: 1.2px solid #8C8C8C;
  border-image-slice: 1;
  width: 16px;
  height: 24px;
  margin-left: calc(8px - 1px);
  background: linear-gradient(
        45deg,
        #fff calc(100% - 5px),
        rgba(255, 255, 255, 0) calc(100% - 5px),
        rgba(255, 255, 255, 0) 100%
      );
  -webkit-clip-path: polygon(
        calc(100% - 7.5px) 0,
        100% 7.5px,
        100% 100%,
        -8px 100%,
        -8px 0
      );
  clip-path: polygon(
        calc(100% - 7.5px) 0,
        100% 7.5px,
        100% 100%,
        -8px 100%,
        -8px 0
      );
}

.emotion-5::before {
  content: ' ';
  position: absolute;
  top: -1px;
  right: -1px;
  height: 8px;
  width: 8px;
  box-shadow: -1px 1px 0px 0.2px #8C8C8C;
  border-bottom-left-radius: 1px;
  background: linear-gradient(
          45deg,
          #fff calc(50% - 0.5px),
          #8C8C8C calc(50% - 0.5px),
          #8C8C8C calc(50% + 0.5px),
          transparent calc(50% + 0.5px),
          transparent 100%
        );
}

.emotion-5::after {
  content: ' ';
  position: absolute;
  height: calc(8px + 1px);
  width: calc(16px + 2px);
  bottom: 3px;
  left: calc(8px * -1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  text-transform: uppercase;
  font-size: 7px;
  color: #fff;
  background: #8C8C8C;
  letter-spacing: 0;
  padding-top: 1px;
  padding-left: 1px;
  font-family: "Rubik",sans-serif;
  font-weight: 400;
}

.emotion-5[data-type]::after {
  content: attr(data-type);
}

.emotion-5::after {
  background: #2A41A2;
}

.emotion-7 {
  margin: 24px;
  margin: 0;
  margin-right: 8px;
}

@media only screen and (max-width: 768px) {
  .emotion-7 {
    margin: 16px;
  }
}

@media only screen and (max-width: 768px) {
  .emotion-7 {
    margin: 0;
  }
}

@media only screen and (max-width: 768px) {
  .emotion-7 {
    margin-right: calc(8px / 2);
  }
}

.emotion-9 {
  display: inline;
  color: rgba(135, 155, 166, 0.5);
  font-size: 0.9em;
}

.emotion-10 {
  height: 8px;
  width: 100%;
  position: relative;
  border-radius: 8px;
  overflow: hidden;
  background: #eaeff4;
  height: calc(8px / 2);
  border-radius: calc(8px / 2);
}

.emotion-10 [data-element='bar'] {
  border-radius: 8px;
}

.emotion-10 [data-element='bar'] {
  border-radius: calc(8px / 2);
}

.emotion-11 {
  position: absolute;
  z-index: 2;
  top: 0;
  left: 0;
  height: 100%;
  width: 0;
  background: #879ba6;
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
  overflow: hidden;
}

.emotion-11::after {
  background: #879ba6;
  border-radius: 0!important;
  background-image: linear-gradient(
          to right,
          #879ba6 8%,
          #d3dce6 18%,
          #879ba6 33%
        )!important;
}

.emotion-13 {
  margin: 24px;
  margin: 0;
  margin-right: 16px;
}

@media only screen and (max-width: 768px) {
  .emotion-13 {
    margin: 16px;
  }
}

@media only screen and (max-width: 768px) {
  .emotion-13 {
    margin: 0;
  }
}

@media only screen and (max-width: 768px) {
  .emotion-13 {
    margin-right: 8px;
  }
}

.emotion-15 {
  color: inherit;
}

.emotion-15:hover {
  cursor: pointer;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
    style={
      {
        "height": "100%",
      }
    }
  >
    <div
      className="emotion-2"
      style={
        {
          "display": "flex",
          "minWidth": 0,
        }
      }
    >
      <div
        className="emotion-3"
        style={
          {
            "width": "100%",
          }
        }
      >
        <div
          className="emotion-4"
          style={
            {
              "display": "flex",
            }
          }
        >
          <div
            className="emotion-5"
            data-type="jpg"
          />
        </div>
        <div
          className="emotion-4"
          style={{}}
        >
          <div
            className="emotion-7"
          />
        </div>
        <div
          className="emotion-2"
          style={
            {
              "minWidth": 0,
            }
          }
        >
          <div
            style={
              {
                "overflow": "hidden",
                "textOverflow": "ellipsis",
                "whiteSpace": "nowrap",
              }
            }
          >
            <span
              className="emotion-9"
            >
              CompleteFile.jpg
            </span>
          </div>
          <div
            className="emotion-10"
            style={
              {
                "backgroundColor": "#d3dce6",
                "marginTop": 4,
              }
            }
          >
            <div
              className="emotion-11"
              data-element="bar"
              style={
                {
                  "width": "100%",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="emotion-4"
      style={{}}
    >
      <div
        className="emotion-13"
      />
    </div>
    <div
      className="emotion-4"
      style={
        {
          "display": "flex",
        }
      }
    >
      <i
        className="Drycon Drycon-download emotion-15"
        onClick={[Function]}
      />
    </div>
    <div
      className="emotion-4"
      style={{}}
    >
      <div
        className="emotion-7"
      />
    </div>
  </div>
</div>
`;

exports[`AttachmentBox matches snapshot when can remove attachment 1`] = `
.emotion-0 {
  background: #F1F5F9;
  border-radius: 4px;
  color: #172b4e;
  height: 32px;
  padding: 0px 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  display: inline-block;
  position: relative;
  border: 1.2px solid #8C8C8C;
  border-image-slice: 1;
  width: 16px;
  height: 24px;
  margin-left: calc(8px - 1px);
  background: linear-gradient(
        45deg,
        #fff calc(100% - 5px),
        rgba(255, 255, 255, 0) calc(100% - 5px),
        rgba(255, 255, 255, 0) 100%
      );
  -webkit-clip-path: polygon(
        calc(100% - 7.5px) 0,
        100% 7.5px,
        100% 100%,
        -8px 100%,
        -8px 0
      );
  clip-path: polygon(
        calc(100% - 7.5px) 0,
        100% 7.5px,
        100% 100%,
        -8px 100%,
        -8px 0
      );
}

.emotion-5::before {
  content: ' ';
  position: absolute;
  top: -1px;
  right: -1px;
  height: 8px;
  width: 8px;
  box-shadow: -1px 1px 0px 0.2px #8C8C8C;
  border-bottom-left-radius: 1px;
  background: linear-gradient(
          45deg,
          #fff calc(50% - 0.5px),
          #8C8C8C calc(50% - 0.5px),
          #8C8C8C calc(50% + 0.5px),
          transparent calc(50% + 0.5px),
          transparent 100%
        );
}

.emotion-5::after {
  content: ' ';
  position: absolute;
  height: calc(8px + 1px);
  width: calc(16px + 2px);
  bottom: 3px;
  left: calc(8px * -1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  text-transform: uppercase;
  font-size: 7px;
  color: #fff;
  background: #8C8C8C;
  letter-spacing: 0;
  padding-top: 1px;
  padding-left: 1px;
  font-family: "Rubik",sans-serif;
  font-weight: 400;
}

.emotion-5[data-type]::after {
  content: attr(data-type);
}

.emotion-5::after {
  background: #2A41A2;
}

.emotion-7 {
  margin: 24px;
  margin: 0;
  margin-right: 8px;
}

@media only screen and (max-width: 768px) {
  .emotion-7 {
    margin: 16px;
  }
}

@media only screen and (max-width: 768px) {
  .emotion-7 {
    margin: 0;
  }
}

@media only screen and (max-width: 768px) {
  .emotion-7 {
    margin-right: calc(8px / 2);
  }
}

.emotion-9 {
  display: inline;
  color: #172b4e;
  font-size: 1em;
}

.emotion-13 {
  color: inherit;
}

.emotion-13:hover {
  cursor: pointer;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
    style={
      {
        "height": "100%",
      }
    }
  >
    <div
      className="emotion-2"
      style={
        {
          "display": "flex",
          "minWidth": 0,
        }
      }
    >
      <div
        className="emotion-3"
        style={
          {
            "width": "100%",
          }
        }
      >
        <div
          className="emotion-4"
          style={
            {
              "display": "flex",
            }
          }
        >
          <div
            className="emotion-5"
            data-type="jpg"
          />
        </div>
        <div
          className="emotion-4"
          style={{}}
        >
          <div
            className="emotion-7"
          />
        </div>
        <div
          className="emotion-2"
          style={
            {
              "minWidth": 0,
            }
          }
        >
          <div
            style={
              {
                "overflow": "hidden",
                "textOverflow": "ellipsis",
                "whiteSpace": "nowrap",
              }
            }
          >
            <span
              className="emotion-9"
            >
              FirstFile.jpg
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="emotion-4"
      style={{}}
    >
      <div
        className="emotion-7"
      />
    </div>
    <div
      className="emotion-4"
      style={
        {
          "display": "flex",
        }
      }
    >
      <i
        className="Drycon Drycon-x emotion-13"
        onClick={[Function]}
      />
    </div>
  </div>
</div>
`;

exports[`AttachmentBox matches snapshot when is given a completed attachment 1`] = `
.emotion-0 {
  background: #F1F5F9;
  border-radius: 4px;
  color: #172b4e;
  height: 32px;
  padding: 0px 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  display: inline-block;
  position: relative;
  border: 1.2px solid #8C8C8C;
  border-image-slice: 1;
  width: 16px;
  height: 24px;
  margin-left: calc(8px - 1px);
  background: linear-gradient(
        45deg,
        #fff calc(100% - 5px),
        rgba(255, 255, 255, 0) calc(100% - 5px),
        rgba(255, 255, 255, 0) 100%
      );
  -webkit-clip-path: polygon(
        calc(100% - 7.5px) 0,
        100% 7.5px,
        100% 100%,
        -8px 100%,
        -8px 0
      );
  clip-path: polygon(
        calc(100% - 7.5px) 0,
        100% 7.5px,
        100% 100%,
        -8px 100%,
        -8px 0
      );
}

.emotion-5::before {
  content: ' ';
  position: absolute;
  top: -1px;
  right: -1px;
  height: 8px;
  width: 8px;
  box-shadow: -1px 1px 0px 0.2px #8C8C8C;
  border-bottom-left-radius: 1px;
  background: linear-gradient(
          45deg,
          #fff calc(50% - 0.5px),
          #8C8C8C calc(50% - 0.5px),
          #8C8C8C calc(50% + 0.5px),
          transparent calc(50% + 0.5px),
          transparent 100%
        );
}

.emotion-5::after {
  content: ' ';
  position: absolute;
  height: calc(8px + 1px);
  width: calc(16px + 2px);
  bottom: 3px;
  left: calc(8px * -1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  text-transform: uppercase;
  font-size: 7px;
  color: #fff;
  background: #8C8C8C;
  letter-spacing: 0;
  padding-top: 1px;
  padding-left: 1px;
  font-family: "Rubik",sans-serif;
  font-weight: 400;
}

.emotion-5[data-type]::after {
  content: attr(data-type);
}

.emotion-5::after {
  background: #2A41A2;
}

.emotion-7 {
  margin: 24px;
  margin: 0;
  margin-right: 8px;
}

@media only screen and (max-width: 768px) {
  .emotion-7 {
    margin: 16px;
  }
}

@media only screen and (max-width: 768px) {
  .emotion-7 {
    margin: 0;
  }
}

@media only screen and (max-width: 768px) {
  .emotion-7 {
    margin-right: calc(8px / 2);
  }
}

.emotion-9 {
  display: inline;
  color: rgba(135, 155, 166, 0.5);
  font-size: 0.9em;
}

.emotion-10 {
  height: 8px;
  width: 100%;
  position: relative;
  border-radius: 8px;
  overflow: hidden;
  background: #eaeff4;
  height: calc(8px / 2);
  border-radius: calc(8px / 2);
}

.emotion-10 [data-element='bar'] {
  border-radius: 8px;
}

.emotion-10 [data-element='bar'] {
  border-radius: calc(8px / 2);
}

.emotion-11 {
  position: absolute;
  z-index: 2;
  top: 0;
  left: 0;
  height: 100%;
  width: 0;
  background: #879ba6;
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
  overflow: hidden;
}

.emotion-11::after {
  background: #879ba6;
  border-radius: 0!important;
  background-image: linear-gradient(
          to right,
          #879ba6 8%,
          #d3dce6 18%,
          #879ba6 33%
        )!important;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
    style={
      {
        "height": "100%",
      }
    }
  >
    <div
      className="emotion-2"
      style={
        {
          "display": "flex",
          "minWidth": 0,
        }
      }
    >
      <div
        className="emotion-3"
        style={
          {
            "width": "100%",
          }
        }
      >
        <div
          className="emotion-4"
          style={
            {
              "display": "flex",
            }
          }
        >
          <div
            className="emotion-5"
            data-type="jpg"
          />
        </div>
        <div
          className="emotion-4"
          style={{}}
        >
          <div
            className="emotion-7"
          />
        </div>
        <div
          className="emotion-2"
          style={
            {
              "minWidth": 0,
            }
          }
        >
          <div
            style={
              {
                "overflow": "hidden",
                "textOverflow": "ellipsis",
                "whiteSpace": "nowrap",
              }
            }
          >
            <span
              className="emotion-9"
            >
              CompleteFile.jpg
            </span>
          </div>
          <div
            className="emotion-10"
            style={
              {
                "backgroundColor": "#d3dce6",
                "marginTop": 4,
              }
            }
          >
            <div
              className="emotion-11"
              data-element="bar"
              style={
                {
                  "width": "100%",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="emotion-4"
      style={{}}
    >
      <div
        className="emotion-7"
      />
    </div>
  </div>
</div>
`;

exports[`AttachmentBox matches snapshot when is given attachment with progress 1`] = `
.emotion-0 {
  background: #F1F5F9;
  border-radius: 4px;
  color: #172b4e;
  height: 32px;
  padding: 0px 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  display: inline-block;
  position: relative;
  border: 1.2px solid #8C8C8C;
  border-image-slice: 1;
  width: 16px;
  height: 24px;
  margin-left: calc(8px - 1px);
  background: linear-gradient(
        45deg,
        #fff calc(100% - 5px),
        rgba(255, 255, 255, 0) calc(100% - 5px),
        rgba(255, 255, 255, 0) 100%
      );
  -webkit-clip-path: polygon(
        calc(100% - 7.5px) 0,
        100% 7.5px,
        100% 100%,
        -8px 100%,
        -8px 0
      );
  clip-path: polygon(
        calc(100% - 7.5px) 0,
        100% 7.5px,
        100% 100%,
        -8px 100%,
        -8px 0
      );
}

.emotion-5::before {
  content: ' ';
  position: absolute;
  top: -1px;
  right: -1px;
  height: 8px;
  width: 8px;
  box-shadow: -1px 1px 0px 0.2px #8C8C8C;
  border-bottom-left-radius: 1px;
  background: linear-gradient(
          45deg,
          #fff calc(50% - 0.5px),
          #8C8C8C calc(50% - 0.5px),
          #8C8C8C calc(50% + 0.5px),
          transparent calc(50% + 0.5px),
          transparent 100%
        );
}

.emotion-5::after {
  content: ' ';
  position: absolute;
  height: calc(8px + 1px);
  width: calc(16px + 2px);
  bottom: 3px;
  left: calc(8px * -1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  text-transform: uppercase;
  font-size: 7px;
  color: #fff;
  background: #8C8C8C;
  letter-spacing: 0;
  padding-top: 1px;
  padding-left: 1px;
  font-family: "Rubik",sans-serif;
  font-weight: 400;
}

.emotion-5[data-type]::after {
  content: attr(data-type);
}

.emotion-5::after {
  background: #2A41A2;
}

.emotion-7 {
  margin: 24px;
  margin: 0;
  margin-right: 8px;
}

@media only screen and (max-width: 768px) {
  .emotion-7 {
    margin: 16px;
  }
}

@media only screen and (max-width: 768px) {
  .emotion-7 {
    margin: 0;
  }
}

@media only screen and (max-width: 768px) {
  .emotion-7 {
    margin-right: calc(8px / 2);
  }
}

.emotion-9 {
  display: inline;
  color: rgba(135, 155, 166, 0.5);
  font-size: 0.9em;
}

.emotion-10 {
  height: 8px;
  width: 100%;
  position: relative;
  border-radius: 8px;
  overflow: hidden;
  background: #eaeff4;
  height: calc(8px / 2);
  border-radius: calc(8px / 2);
}

.emotion-10 [data-element='bar'] {
  border-radius: 8px;
}

.emotion-10 [data-element='bar'] {
  border-radius: calc(8px / 2);
}

.emotion-11 {
  position: absolute;
  z-index: 2;
  top: 0;
  left: 0;
  height: 100%;
  width: 0;
  background: #879ba6;
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
  overflow: hidden;
}

.emotion-11::after {
  background: #879ba6;
  border-radius: 0!important;
  background-image: linear-gradient(
          to right,
          #879ba6 8%,
          #d3dce6 18%,
          #879ba6 33%
        )!important;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
    style={
      {
        "height": "100%",
      }
    }
  >
    <div
      className="emotion-2"
      style={
        {
          "display": "flex",
          "minWidth": 0,
        }
      }
    >
      <div
        className="emotion-3"
        style={
          {
            "width": "100%",
          }
        }
      >
        <div
          className="emotion-4"
          style={
            {
              "display": "flex",
            }
          }
        >
          <div
            className="emotion-5"
            data-type="jpg"
          />
        </div>
        <div
          className="emotion-4"
          style={{}}
        >
          <div
            className="emotion-7"
          />
        </div>
        <div
          className="emotion-2"
          style={
            {
              "minWidth": 0,
            }
          }
        >
          <div
            style={
              {
                "overflow": "hidden",
                "textOverflow": "ellipsis",
                "whiteSpace": "nowrap",
              }
            }
          >
            <span
              className="emotion-9"
            >
              ProgressFile.jpg
            </span>
          </div>
          <div
            className="emotion-10"
            style={
              {
                "backgroundColor": "#d3dce6",
                "marginTop": 4,
              }
            }
          >
            <div
              className="emotion-11"
              data-element="bar"
              style={
                {
                  "width": "50%",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="emotion-4"
      style={{}}
    >
      <div
        className="emotion-7"
      />
    </div>
  </div>
</div>
`;

exports[`AttachmentBox matches snapshot when is given the simplest attachment 1`] = `
.emotion-0 {
  background: #F1F5F9;
  border-radius: 4px;
  color: #172b4e;
  height: 32px;
  padding: 0px 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  display: inline-block;
  position: relative;
  border: 1.2px solid #8C8C8C;
  border-image-slice: 1;
  width: 16px;
  height: 24px;
  margin-left: calc(8px - 1px);
  background: linear-gradient(
        45deg,
        #fff calc(100% - 5px),
        rgba(255, 255, 255, 0) calc(100% - 5px),
        rgba(255, 255, 255, 0) 100%
      );
  -webkit-clip-path: polygon(
        calc(100% - 7.5px) 0,
        100% 7.5px,
        100% 100%,
        -8px 100%,
        -8px 0
      );
  clip-path: polygon(
        calc(100% - 7.5px) 0,
        100% 7.5px,
        100% 100%,
        -8px 100%,
        -8px 0
      );
}

.emotion-5::before {
  content: ' ';
  position: absolute;
  top: -1px;
  right: -1px;
  height: 8px;
  width: 8px;
  box-shadow: -1px 1px 0px 0.2px #8C8C8C;
  border-bottom-left-radius: 1px;
  background: linear-gradient(
          45deg,
          #fff calc(50% - 0.5px),
          #8C8C8C calc(50% - 0.5px),
          #8C8C8C calc(50% + 0.5px),
          transparent calc(50% + 0.5px),
          transparent 100%
        );
}

.emotion-5::after {
  content: ' ';
  position: absolute;
  height: calc(8px + 1px);
  width: calc(16px + 2px);
  bottom: 3px;
  left: calc(8px * -1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  text-transform: uppercase;
  font-size: 7px;
  color: #fff;
  background: #8C8C8C;
  letter-spacing: 0;
  padding-top: 1px;
  padding-left: 1px;
  font-family: "Rubik",sans-serif;
  font-weight: 400;
}

.emotion-5[data-type]::after {
  content: attr(data-type);
}

.emotion-5::after {
  background: #2A41A2;
}

.emotion-7 {
  margin: 24px;
  margin: 0;
  margin-right: 8px;
}

@media only screen and (max-width: 768px) {
  .emotion-7 {
    margin: 16px;
  }
}

@media only screen and (max-width: 768px) {
  .emotion-7 {
    margin: 0;
  }
}

@media only screen and (max-width: 768px) {
  .emotion-7 {
    margin-right: calc(8px / 2);
  }
}

.emotion-9 {
  display: inline;
  color: #172b4e;
  font-size: 1em;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
    style={
      {
        "height": "100%",
      }
    }
  >
    <div
      className="emotion-2"
      style={
        {
          "display": "flex",
          "minWidth": 0,
        }
      }
    >
      <div
        className="emotion-3"
        style={
          {
            "width": "100%",
          }
        }
      >
        <div
          className="emotion-4"
          style={
            {
              "display": "flex",
            }
          }
        >
          <div
            className="emotion-5"
            data-type="jpg"
          />
        </div>
        <div
          className="emotion-4"
          style={{}}
        >
          <div
            className="emotion-7"
          />
        </div>
        <div
          className="emotion-2"
          style={
            {
              "minWidth": 0,
            }
          }
        >
          <div
            style={
              {
                "overflow": "hidden",
                "textOverflow": "ellipsis",
                "whiteSpace": "nowrap",
              }
            }
          >
            <span
              className="emotion-9"
            >
              FirstFile.jpg
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="emotion-4"
      style={{}}
    >
      <div
        className="emotion-7"
      />
    </div>
  </div>
</div>
`;
